# edge

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
include/: moisture.h  mqtt.h  photoresistor.h  pump.h  ultrasonic.h  wifi.h
src/: CMakeLists.txt  main.c  moisture.c  mqtt.c  photoresistor.c  pump.c  ultrasonic.c  wifi.c
